# Hello-World

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build1.bat  buildcmake.bat  clean.bat  main.c  makefile
Doc/: Makefile.md  Markdown.md  PlantUML.md  bat.md  gcc.md  gitcommand.md
inc/: testfunc.h
src/: testfunc.c
